# timetables-lib

./: README.md  pyproject.toml
.github/workflows/: publish.yml
timetables/base/: __init__.py  model.py
timetables/parser/base/: __init__.py  dataset.py  file.py  parser.py
timetables/schemas/: __init__.py  classroom.py  lesson.py  register.py  subject.py  teacher.py  team.py  url.py  weekday.py
